--- a/app/src/main/res/layout/activity_anniversary_main.xml
+++ b/app/src/main/res/layout/activity_anniversary_main.xml
@@ -156,7 +156,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
         android:layout_marginTop="5dp"
-        android:text="$9.99"
+        android:text="9.99"
         android:textColor="@color/Price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -167,7 +167,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
         android:layout_marginTop="5dp"
-        android:text="$9.99"
+        android:text="9.99"
         android:textColor="@color/Price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
@@ -179,7 +179,7 @@
         android:layout_marginStart="137dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="81dp"
-        android:text="$4.99"
+        android:text="4.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/price13"
@@ -192,7 +192,7 @@
         android:layout_marginStart="137dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="81dp"
-        android:text="$4.99"
+        android:text="4.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
