--- a/app/src/main/res/layout/activity_event_main.xml
+++ b/app/src/main/res/layout/activity_event_main.xml
@@ -156,7 +156,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="63dp"
         android:layout_marginTop="5dp"
-        android:text="$14.99"
+        android:text="14.99"
         android:textColor="@color/Price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -168,7 +168,7 @@
         android:layout_marginStart="62dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="138dp"
-        android:text="$4.99"
+        android:text="4.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toStartOf="@+id/price10"
         app:layout_constraintStart_toStartOf="parent"
@@ -180,7 +180,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="70dp"
-        android:text="$49.99"
+        android:text="49.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -192,7 +192,7 @@
         android:layout_marginStart="144dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="65dp"
-        android:text="$19.99"
+        android:text="19.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/price7"
