--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,7 @@
         android:layout_marginTop="15dp"
         android:backgroundTint="@color/orange"
         android:clickable="true"
-        android:src="@drawable/cart"
+        android:src="@drawable/shopping_cart"
         app:layout_constraintEnd_toStartOf="@+id/BtnLogout"
         app:layout_constraintStart_toEndOf="@+id/BtnProfile"
         app:layout_constraintTop_toBottomOf="@+id/other" />
