--- a/app/src/main/res/layout/activity_wedding_main.xml
+++ b/app/src/main/res/layout/activity_wedding_main.xml
@@ -162,7 +162,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="78dp"
         android:layout_marginTop="5dp"
-        android:text="$9.99"
+        android:text="9.99"
         android:textColor="@color/Price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
@@ -173,7 +173,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="69dp"
         android:layout_marginTop="5dp"
-        android:text="$14.99"
+        android:text="14.99"
         android:textColor="@color/Price"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
@@ -185,7 +185,7 @@
         android:layout_marginStart="132dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="70dp"
-        android:text="$29.99"
+        android:text="29.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/price19"
@@ -198,7 +198,7 @@
         android:layout_marginStart="130dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="73dp"
-        android:text="$29.99"
+        android:text="29.99"
         android:textColor="@color/Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/price5"
