--- a/app/src/main/res/layout/cart_items.xml
+++ b/app/src/main/res/layout/cart_items.xml
@@ -50,6 +50,7 @@
                     android:layout_height="wrap_content"
 
                     android:layout_marginLeft="250dp"
+                    android:backgroundTint="@color/orange"
                     android:text="Delete" />
 
             </LinearLayout>
